--- a/HabitFormer/app/src/main/res/layout/content_main.xml
+++ b/HabitFormer/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.saymtf.habitformer.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:id="@+id/content">
 
     <Button
         android:layout_width="wrap_content"
@@ -18,5 +19,6 @@
         android:text="@string/plus_button"
         android:id="@+id/add_habit_button"
         android:onClick="addHabit"/>
+
 
 </RelativeLayout>
