--- a/HabitFormer/app/src/main/res/layout/fragment_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_habit.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +9,19 @@
     tools:context="com.saymtf.habitformer.HabitFragment"
     tools:showIn="@layout/activity_habit">
 
+    <EditText android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/habit_name"
+        android:hint="@string/a_habit_name_here" />
 
-</RelativeLayout>
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/create_habit"
+        android:id="@+id/create_a_habit"
+        android:onClick="createTheHabit"/>
+
+
+</TableLayout>
