--- a/HabitFormer/app/src/main/res/layout/fragment_display_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_display_habit.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- Changed android:context="DisplayHabit" from DisplayHabitFragment -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.saymtf.habitformer.MainActivity"
-    tools:showIn="@layout/activity_main"
-    android:id="@+id/main_content">
+    tools:context="com.saymtf.habitformer.DisplayHabitFragment"
+    tools:showIn="@layout/activity_display_habit"
+    android:id="@+id/display_content">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/plus_button"
-        android:id="@+id/add_habit_button"
-        android:onClick="addHabit"/>
-
+        android:id="@+id/start_button"
+        android:text="@string/start_button"
+        android:onClick="startHabit"/>
 
 </RelativeLayout>
