--- a/HabitFormer/app/src/main/res/layout/fragment_display_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_display_habit.xml
@@ -12,10 +12,21 @@
     android:id="@+id/display_content">
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
         android:id="@+id/start_button"
         android:text="@string/start_button"
-        android:onClick="startHabit"/>
+        android:onClick="startAction"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/edit_habit_button"
+        android:text="@string/edit_button"
+        android:onClick="editAction"/>
 
 </RelativeLayout>
