--- a/HabitFormer/app/src/main/res/layout/fragment_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_habit.xml
@@ -14,6 +14,18 @@
         android:id="@+id/habit_name"
         android:hint="@string/a_habit_name_here" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/choose_your_time"
+        android:layout_marginTop="@dimen/upper_spacing"
+        android:text="@string/choose_your_time"
+        />
+    <NumberPicker
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/habit_time"
+        />
 
 
     <Button
