--- a/HabitFormer/app/src/main/res/layout/fragment_configure_time.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_configure_time.xml
@@ -32,4 +32,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/configure_time"
         android:text="@string/configure_time_text"/>
+
+    <Button android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/done"
+        android:text="@string/done"
+        android:onClick="done"/>
 </TableLayout>
