--- a/HabitFormer/app/src/main/res/layout/fragment_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_habit.xml
@@ -7,7 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.saymtf.habitformer.HabitFragment"
-    tools:showIn="@layout/activity_habit">
+    tools:showIn="@layout/activity_habit"
+    android:id="@+id/habit">
 
     <EditText android:layout_width="wrap_content"
         android:layout_height="wrap_content"
