--- a/HabitFormer/app/src/main/res/layout/content_create_the_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/content_create_the_habit.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="com.saymtf.habitformer.HabitFragment"
+    android:name="com.saymtf.habitformer.CreateTheHabitFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_habit" />
+    tools:layout="@layout/fragment_create_the_habit" />
