--- a/HabitFormer/app/src/main/res/layout/fragment_create_the_habit.xml
+++ b/HabitFormer/app/src/main/res/layout/fragment_create_the_habit.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,4 +39,4 @@
             android:id="@+id/create_a_habit"
             android:onClick="createTheHabit"/>
 
-</LinearLayout>
+</TableLayout>
